<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="Willemse.flattris.com.example.HighScore">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="sans-serif-black"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/title_activity_high_score"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#3F51B5" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_weight="1"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/InfHigh"
        android:textColor="#326432"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/Inf1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal|center_vertical"
        android:textColor="#326432"
        />

    <TextView
        android:id="@+id/Inf2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal|center_vertical"
        android:textColor="#326432"
        />

    <TextView
        android:id="@+id/Inf3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal|center_vertical"
        android:textColor="#326432"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_weight="1"
        android:gravity="center_horizontal|center_vertical"
        android:textColor="#326432"
        android:textSize="18sp"
        android:text="@string/ChaHigh" />

    <TextView
        android:id="@+id/Ch1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal|center_vertical"
        />

    <TextView
        android:id="@+id/Ch2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal|center_vertical"
        />

    <TextView
        android:id="@+id/Ch3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal|center_vertical"
         />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_weight="1"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/ConHigh"
        android:textColor="#326432"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/Con1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal|center_vertical"
        />

    <TextView
        android:id="@+id/Con2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal|center_vertical"
        />

    <TextView
        android:id="@+id/Con3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal|center_vertical"
         />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        style="?android:attr/buttonBarButtonStyle"
        android:orientation="horizontal">

        <Button
            android:id="@+id/BackSettings"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:text="@string/ExitHigh"
            android:textColor="#FFFFFF"
            app:backgroundTint="#3F51B5" />

        <Button
            android:id="@+id/ResetScores"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:text="@string/ResetHigh"
            android:textColor="#FFFFFF"

            app:backgroundTint="#3F51B5" />
    </LinearLayout>

</LinearLayout>